# asocgen

./: .gitignore  Makefile  README.md  README.txt  TODO.org  TODO.txt  asocgen.cabal  asocgen.prof  compile.sh
c/: Makefile  snippets.txt
c/src/: main.c
c/src/common/: .#smap.h  common.c  common.h  common_includes.h  sarray.c  sarray.h  sarray16.c  sarray16.h  sarray8.c  sarray8.h  sbimap.c  sbimap.h  sbitfield.c  sbitfield.h  smap.c  smap.h  sperm.c  sperm.h
c/src/group/: group.c  group.h  group_common.c  group_common.h  group_gen.c  group_gen.h  group_hom.c  group_hom.h  subgroup.c  (+2 more)
c/test/: test.c  test.h  test_array.c  test_isomorph.c  test_map.c  test_smallgroup.c
cpp/src/: Asocgen.cpp  Asocgen.h
cppversion/: Makefile
cppversion/src/: GroupCn.cpp  Main.cpp
cversion/: Makefile
cversion/src/: Asocgen.cpp  Asocgen.h  Group.h  GroupCn.h  Main.cpp  main.c
haskell/: asocgen.cabal  compile_and_run.sh  stack.yaml
prof/: prof_clever.prof  prof_list.prof  prof_rec.prof
src/: Gen.hs  Main.hs  Param.hs  main.c
src/application/: group_library.c  group_library.h
src/common/: .#sperm.c  common.h  common_includes.h  sarray16.h  sarray64.c  sarray64.h  sarray8.c  sbitfield.h  smap.h  sperm.c  sperm.h
src/group/: group.c  group.h  group_common.c  group_common.h  group_gen.c  group_gen.h  group_hom.c  group_hom.h  group_includes.h  group_io.c  group_io.h
src/ring/: ring.c  ring.h  ring_common.c  ring_common.h  ring_includes.h
test/: test.c  test_binom.c  test_group.c  test_isomorph.c  test_map.c  test_math.c  test_print.c  test_ring.c  test_smallgroup.c
(+4 files in other folders)
