name:                asocgen
version:             0.1.0.0
synopsis:            Generating associative structures

homepage:            http://elfeck.com
license:             MIT
license-file:        LICENSE
author:              Sebastian Kreisel
maintainer:          kreisel.sebastian@gmail.com

category:            Math
build-type:          Simple
cabal-version:       >=1.10

executable asocgen
  main-is:             Main.hs
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  build-depends:       base
                     , monad-loops